Removes reference to deprecated for removal class AccessControlException